<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ProductActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/product_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:id="@+id/tv_title_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_products_homescress"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </androidx.appcompat.widget.Toolbar>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="none"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/product_toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">

         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
             <FrameLayout
                 android:id="@+id/fl_product_image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
                 <ImageView
                     android:id="@+id/iv_product_image"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:contentDescription="@string/product_image"
                      android:background="@color/colorImageBackground"
                     android:scaleType="fitXY"/>
                 <ImageView
                     android:id="@+id/add_image_product"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@string/add_image_icon"
                     android:src="@drawable/ic_vector_add_photo"
                     android:layout_gravity="end|bottom"

                     android:padding="16dp"
                     android:foreground="?attr/selectableItemBackgroundBorderless"
                     />


             </FrameLayout>
             

             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_product_title"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/fl_product_image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:hint="@string/product_title"
                 app:hintTextColor="@color/colorSecondaryText"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
                 >
                 <com.example.happyshop.utils.RegularEditText
                     android:id="@+id/et_product_title"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="text"
                     android:padding="@dimen/et_padding"
                     android:textSize="@dimen/et_textSize"
                     android:textColor="@color/colorPrimaryText"
                     />




             </com.google.android.material.textfield.TextInputLayout>

             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_product_price"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/til_product_title"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:hint="@string/product_price"
                 app:hintTextColor="@color/colorSecondaryText"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
                 >
                 <com.example.happyshop.utils.RegularEditText
                     android:id="@+id/et_product_price"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="text"
                     android:padding="@dimen/et_padding"
                     android:textSize="@dimen/et_textSize"
                     android:textColor="@color/colorPrimaryText"
                     />

             </com.google.android.material.textfield.TextInputLayout>


             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_product_description"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/til_product_price"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:hint="@string/product_description"
                 app:hintTextColor="@color/colorSecondaryText"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
                 >
                 <com.example.happyshop.utils.RegularEditText
                     android:id="@+id/et_product_description"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="textMultiLine"
                     android:minLines="3"
                     android:padding="@dimen/et_padding"
                     android:textSize="@dimen/et_textSize"
                     android:textColor="@color/colorPrimaryText"
                     />

             </com.google.android.material.textfield.TextInputLayout>

             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_product_quantity"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/til_product_description"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:hint="@string/product_quantity"
                 app:hintTextColor="@color/colorSecondaryText"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
                 >
                 <com.example.happyshop.utils.RegularEditText
                     android:id="@+id/et_product_quantity"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inputType="number"
                     android:padding="@dimen/et_padding"
                     android:textSize="@dimen/et_textSize"
                     android:textColor="@color/colorPrimaryText"
                     />

             </com.google.android.material.textfield.TextInputLayout>

             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_submit_product"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                 android:foreground="?attr/selectableItemBackground"
                 app:layout_constraintTop_toBottomOf="@id/til_product_quantity"
                 android:layout_gravity="center"
                  app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="30dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="20dp"
                 android:paddingBottom="@dimen/btn_padding"
                 android:paddingTop="@dimen/btn_padding"
                 android:textColor="@color/white"
                 android:text="@string/btn_lbl_submit"/>

         </androidx.constraintlayout.widget.ConstraintLayout>





     </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>